ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: angular-app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: angular.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: angular-app
                port:
                  number: 80
